Tried just with js

--- a/Tune-Crafter-Webapp/src/index.html
+++ b/Tune-Crafter-Webapp/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <input type="file" id="file-input" />
     <div id="image-wrapper" style="height: 400px; width: 400px; position: relative;"></div>
-    <script src="../build/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
 
