--- a/Tune-Crafter-Webapp/src/index.html
+++ b/Tune-Crafter-Webapp/src/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smartwatch Data Web App</title>
     <link rel="stylesheet" href="styles.css">
-    <!--<script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision/vision_bundle.js"
-    crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision/vision_bundle.js"
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <input type="file" id="file-input" />
     <div id="image-wrapper" style="height: 400px; width: 400px; position: relative;"></div>
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
 
